<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_adoptions"
        android:icon="@drawable/ic_favorite"
        android:title="@string/adoptions" />
    <item
        android:id="@+id/nav_veterinarians"
        android:icon="@drawable/ic_veterinarian"
        android:title="@string/veterinarians" />
    <item
        android:id="@+id/nav_lost"
        android:icon="@drawable/ic_lost_pet"
        android:title="@string/lost" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>
